normalize_grammar.tt
grammar Normalize

  rule text
    ( sms / directive / comment / quoted / unquoted )* <Text>
  end

  rule comment
    "!" [^\n]* <Delete>
  end

  rule directive
    "@" [^\n]* <Directive>
  end

  rule quoted
    ( '"' [^"]* '"' / "'" [^']* "'" )+ <Quoted>
  end

  rule sms
    "@" [^\n]* <SMS>
  end

  rule unquoted
    [^'"!@]+ <Normalize>
  end

end

# paul.a.madden@noaa.gov
